# earth2studio-corrdiff-test

./: main.py  pyproject.toml
notebooks/: checkup.ipynb
