[project]
name = "earth2studio-corrdiff-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "earth2studio[corrdiff]",
    "ipykernel",
    "cartopy",
    "matplotlib",
]

[tool.uv.sources]
earth2studio = { git = "https://github.com/NVIDIA/earth2studio.git", rev = "0.12.1" }
